@@ -1,5 +1,11 @@
 2012-04-29 Braden McDaniel  <braden@endoframe.com>
 
+	* src/script/javascript.cpp: As of XULRunner 12.0, JSRuntime
+	should now be used by a single thread.  For now, at least, employ
+	a JSRuntime for each Script node.
+
+2012-04-29 Braden McDaniel  <braden@endoframe.com>
+
 	* src/script/javascript.cpp: Fix copy/paste error.
 
 2012-04-29 Braden McDaniel  <braden@endoframe.com>
